# jay-ai-client

./: .env.example  .gitignore  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json
public/elements/: JiraTicket.jsx
src/: app.py  chat.py  config.py  utils.py
